<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="conversion">"会话"</string>
    <string name="device_info_default">"未知"</string>
    <string name="brightness" >"亮度"</string>
    <string name="display_settings">"显示"</string>
    <string name="auto_brightness_title">"自动调节亮度"</string>
    <string name="auto_brightness_summary">"根据环境光线情况优化亮度"</string>
    <string name="wifi" >"WIFI"</string>
    <string name="screen_timeout" >"休眠"</string>
    <string name="media_volume_option_title">"媒体音量"</string>
    <string name="model_number">"型号"</string>
    <string name="build_number">"版本号"</string>
    <string name="screen_timeout_summary" >"无操作<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>后"</string>

    <string name="app_name">MySkinodTZZO</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="setting">设置</string>

    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
        <item>#com.baidu.android.voicedemo.recognization.online.InFileStream.create16kStream(), 文件流</item>
        <item>#com.baidu.android.voicedemo.recognization.online.MicrophoneInputStream.getInstance(), 自行从麦克风读取</item>
    </string-array>

    <string name="decoder_default"></string>
    <string-array name="decoder_list">
        <item>@string/decoder_default</item>
        <item>0, 纯在线</item>
        <item>2, 离线命令词及在线识别混合, 在线优先</item>
    </string-array>

    <string name="language_default"></string>
    <string-array name="language">
        <item>@string/language_default</item>
        <item>cmn-Hans-CN, 普通话(默认)</item>
        <item>en-GB, 英语(美国)</item>
        <item>sichuan-Hans-CN, 四川话</item>
        <item>yue-Hans-CN, 粤语</item>
    </string-array>

    <string name="nlu_default"></string>
    <string-array name="nlu_list">
        <item>@string/nlu_default</item>
        <item>enable, 开启本地语义解析（不支持英语）</item>
        <item>enable-all, 在enable参数基础上,临时解析结果也做本地语义分析</item>
        <item>disable, 不适用语义解析</item>
    </string-array>

    <string name="vad_default"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>dnn, 默认，推荐模型</item>
        <item>touch,  关闭静音断句功能。用戶手动停止录音</item>
    </string-array>
    <string name="_model_default"></string>
    <string-array name="_model_list">
        <item>@string/vad_default</item>
        <item>search, 搜索模型，默认， 适用于短句， 无逗号，可以有语义</item>
        <item>input, 输入法模型，适用于长句及长语音，有逗号分割， 无语义</item>
        <item>far, 远场模型，高级，适用于音源离麦克风较远(>1m)的录音，有逗号分割， 可以有语义</item>
    </string-array>
    <string name="vad_timeout_default"></string>
    <string-array name="vad_timeout_list">
        <item>@string/vad_timeout_default</item>
        <item>0, 开启长语音（离线不支持）。建议输入法模型。</item>
        <item>800, 毫秒，静音800ms后断句，适用于输入短语</item>
        <item>2000, 毫秒，静音2000ms后断句，适用于输入长句</item>
        <item>2230, 毫秒，请修改代码中的VAD_ENDPOINT_TIMEOUT，自定义时长（建议800ms-3000ms之间）</item>
    </string-array>

    <string name="prop_default"></string>

    <string-array name="prop_list">
        <item>@string/prop_default</item>
        <item>10005, 热词（默认）</item>
        <item>10060, 地图</item>
        <item>10001, 音乐</item>
        <item>10002, 视频</item>
        <item>10003, 应用</item>
        <item>10004, 网页</item>
        <item>10006, 购物</item>
        <item>10007, 健康</item>
        <item>10008, 打电话</item>
        <item>10008, 超级电话</item>
        <item>10052, 医疗</item>
        <item>10053, 汽车</item>
        <item>10054, 娱乐餐饮</item>
        <item>10055, 财经</item>
        <item>10056, 游戏</item>
        <item>10057, 菜谱</item>
        <item>10058, 助手</item>
        <item>20000, 输入</item>
    </string-array>


    <string name="button_ok">Ok</string>

    <string name="permission_available_call_phone">Call Phone Permission Available</string>
    <string name="permissions_not_granted">Call Phone Permission Not Granted</string>
    <string name="permission_contacts_rationale">We need Call Phone Permissions to allow the app to initiate outbound calls.</string>

    <string name="validation_enter_phone_number">Please enter a Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Conntected">已连接</string>
    <string name="UnConntected">未连接</string>
    <string name="wireless_update">无线升级</string>
    <string name="delete_data">清除数据</string>
    <string name="wifi_spot">热点</string>
    <string name="noset">未开启</string>
    <string name="number">数字</string>
    <string name="latterchar">字符</string>

</resources>
